tests/fail/tip-atama-yanlis-ondalik.kip
(* Yanlış tip ataması: dizge olarak tam-sayı *)
dizge olarak 5'i yaz.
